--- a/index.html
+++ b/index.html
@@ -1,147 +1,33 @@
 <!DOCTYPE html>
-<!-- saved from url=(0020)https://PixelRuins.com/ -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <!-- Site Metadata -->
-    
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="PixelRuins )">
-    <meta name="keywords" content="Pixel, PixelArt, Texture Pack, Resource Pack, Minecraft, r">
-    <meta name="author" content="Jakob.zero">
-    <!-- Site Font -->
-    <link href="../assets/theme/css/css" rel="stylesheet" type="text/css">
-    <!-- Site Title -->
-    <title>PixelRuins | Home</title>    <!-- Site CSS Styles -->
-    <link rel="shortcut icon" href="../assets/images/Jakob_Logo-64.ico">
-    <link rel="stylesheet" type="text/css" href="../assets/theme/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="../assets/theme/css/dataTables.bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="../assets/theme/css/soartex_site.css">
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body role="document">
-    <!-- Navigation -->
-    <style type="text/css">
-  .header-image {
-    background: url('../assets/images/background_00.jpg') no-repeat center center;
-    background-size: cover;
-    padding-bottom: 28%;
-  }
-</style>
-<!-- Header Image -->
-<div class="container-fluid header-image">
-  <div class="container">
-    <div class="pull-right"></div>
-  </div>
-</div>
-<!-- Navigation / Header -->
-<div id="sticky-anchor"></div>
-<nav id="PixelRuins-home-nav" class="navbar navbar-static-top navbar-inverse soartex-nav-bottom" role="navigation">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-soartex-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="https://JakobZero.github.io/">Home</a>
-    </div>
-    <div class="collapse navbar-collapse navbar-soartex-collapse">
-      <ul class="nav navbar-nav">
-        <!-- <li><a href="http://forums.soartex.net/"><span class="glyphicon glyphicon-user"></span> Forum</a></li> -->
-        <li><a href="https://JakobZero.github.io/news/"><span class="glyphicon glyphicon-info-sign"></span> Works</a></li>
-        <li><a href="https://JakobZero.github.io/license/"><span class="glyphicon glyphicon-lock"></span> About</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-            <!-- <li><a href="/twitch/"><span class="glyphicon glyphicon-film"></span> Streams</a></li> -->
-            <!-- <li role="presentation" class="divider"></li> -->
-            <li><a href="https://JakobZero.github.io/faq/">FAQ</a></li>
-            <li role="presentation" class="divider"></li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>    <!-- JS Required -->
-    <noscript>
-      <div class="container alert alert-danger alert-dismissible" role="alert">
-        <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-        <strong>Danger!</strong><br/>Your browser does not support javascript. This site will not function without javascript enabled.
-      </div>
-    </noscript>
-    <!-- Welcome Content -->
-<div id="main-header" class="container">
-  <div class="jumbotron">
-    <div class="page-header">
-      <h1>PixelRuins | <small>Welcome</small></h1>
-    </div>
-    <p>
-      Hello, welcome to my homepage. I'm Jakob.zero, texture pack creator and pixel artist. I like music, painting, photography and mountaineering. My favorite thing to do is to share my happiness.
-    </p>
-  </div>
-</div>
-<!-- Welcome Content -->
-<div id="main-header" class="container">
-  <div class="jumbotron">
-    <div class="page-header">
-      <h2>My Works</h2>
-    </div>
-      <div class="span3">
-        <a href="https://JakobZero.github.io"><img src="https://s2.loli.net/2022/04/16/igLhdJfjB6AQrza.png" width="150px"></a>
-        <h3>BlockPixel</h3>
-        <p>Texture Pack</p>
-      </div>
-      <div class="span3">
-        <a href="https://JakobZero.github.io"><img src="https://s2.loli.net/2022/04/16/igLhdJfjB6AQrza.png" width="150px"></a>
-        <h3>GridPixel</h3>
-        <p>Texture Pack</p>
-      </div>
-    </div>
-  </div>
-</div>
-    <!-- Cookie Policy -->
-    <div class="container" id="cookie-policy" style="display: block;">
-      <div class="jumbotron">          
-      <img class="logo-JakobZero" src="../assets/images/Jakob_Logo-64.ico" alt="JakobZero Logo">
-      <a href="#"><h2><b>Jakob.zero</b></h2></a>
-      <a href="https://twitter.com/Jakob_zero">@Jakob_zero</a>
-      </div>
-    </div>
-    <!-- Main Content -->
-  <!-- Site Javascripts -->
-  <script type="text/javascript" async="" src="../assets/theme/js/linkid.js"></script><script async="" src="../assets/theme/js/analytics.js"></script><script type="text/javascript" src="../assets/theme/js/jquery-1.11.1.min.js.下载"></script>
-  <script type="text/javascript" src="../assets/theme/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="../assets/theme/js/vticker.min.js"></script>
-  <script type="text/javascript" src="../assets/theme/js/jquery.dataTables.min.js"></script>
-  <script type="text/javascript" src="../assets/theme/js/dataTables.bootstrap.min.js"></script>
-  <script type="text/javascript" src="../assets/theme/js/simply-toast.min.js"></script>
-  <script type="text/javascript" src="../assets/theme/js/google_tracking.js"></script>
-    <script type="text/javascript" src="../assets/theme/js/www.min.js"></script>
-  <footer>
-<div id="footer">
-  <div class="container">
-    <div class="row">
-      <div id="news" class="col-md-12 copyright" style="overflow: hidden; position: relative; height: 20px;">
-        <div class="text-center">
-          <a>
-              ©2022 PixelRuins. All Rights Reserved.
-              <br/>
-              <br/>
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<script>
-  $(function() {
-    $('#news').vTicker('init');
-  });
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>RainbowPixel</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>
+            WELCOME!
+        </h1>
+    </header>
 
-  </footer>
-</body></html>
+    <main>
+        <section>
+            <h2>My name is Jakob.Zero</h2>
+            <p>This is the RainbowPixel Studio website that I created.</p>
+        </section>
+        <section>
+            <h2>Project</h2>
+            <ul>
+                <li>BlockPixel</li>
+                <li>GridPixel</li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 Jakob.Zero</p>
+    </footer>
+</body>
+</html>
