--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Jakob_Zero. All Rights Reserved.</p>
+        <p>&copy; 2024 Jakob_zero. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
