--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <main>
         <section>
-            <h2>My name is Jakob.Zero</h2>
+            <h2>RainbowPixel Studio</h2>
             <p>This is the RainbowPixel Studio website that I created.</p>
         </section>
         <section>
@@ -27,7 +27,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Jakob_zero. All Rights Reserved.</p>
+        <p>&copy; 2024 Jakob_zero. All Rights Reserved. | RainbowPixel</p>
     </footer>
 </body>
 </html>
