--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             height: 100%;
             overflow-x: hidden;
         }
-        .background-image {
+        background-image {
             position: fixed;
             top: 0;
             left: 0;
@@ -22,7 +22,7 @@
             background-size: cover;
             z-index: -1;
         }
-        .content {
+        content {
             padding: 20px;
             font-family: Arial, sans-serif;
         }
