--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
             height: 100%;
             overflow-x: hidden;
         }
-        background-image {
+        
+        .background-image {
             position: fixed;
             top: 0;
             left: 0;
             width: 100vw;
             height: 100vh;
-            background: url('../assets/images/background_00.jpg') no-repeat center center;
+            background: url('assets/images/back_001.jpg') no-repeat center center;
             background-size: cover;
             z-index: -1;
-        }
-        content {
+    }
+        
+        .content {
             padding: 20px;
             font-family: Arial, sans-serif;
         }
