--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             left: 0;
             width: 100vw;
             height: 100vh;
-            background: url('assets/images/back_001.jpg') no-repeat center center;
+            background: url('assets/images/backgroud_00.jpg') no-repeat center center;
             background-size: cover;
             z-index: -1;
         }
