--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             left: 0;
             width: 100vw;
             height: 100vh;
-            background: url('assets/images/back_001.jpg') no-repeat center center;
+            background: url('assets/images/background_00.jpg') no-repeat center center;
             background-size: cover;
             z-index: -1;
         }
