--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         }
 
         header {
-            background: rgba(0, 0, 0, 0.5);
+            background: #791965;
             color: #fff;
             padding: 20px;
             text-align: center;
