--- a/index.html
+++ b/index.html
@@ -43,8 +43,20 @@
         footer {
             background: #222;
             color: #fff;
-            text-align: center;
             padding: 10px 20px;
+            display: flex;
+            justify-content: space-around; /* 横向平铺 */
+            align-items: center;
+        }
+
+        .logo {
+            height: 128px; /* 固定高度 */
+            cursor: pointer; /* 鼠标悬停效果 */
+            transition: transform 0.3s ease; /* 悬停动画 */
+        }
+
+        .logo:hover {
+            transform: scale(1.1); /* 放大效果 */
         }
     </style>
 </head>
@@ -61,17 +73,12 @@
             <h2>RainbowPixel Studio</h2>
             <p>This is the RainbowPixel Studio website that I created.</p>
         </section>
-        <section>
-            <h2>Project</h2>
-            <ul>
-                <li>BlockPixel</li>
-                <li>GridPixel</li>
-            </ul>
-        </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Jakob_zero. All Rights Reserved. | RainbowPixel</p>
+        <!-- 项目 Logo -->
+        <a href="project1.html"><img src="assets/images/blockpixel_logo.png" class="logo" alt="Project 1"></a>
+        <a href="project2.html"><img src="assets/images/gridpixel_logo.png" class="logo" alt="Project 2"></a>
     </footer>
 </body>
 </html>
