--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 
     <footer>
         <!-- 项目 Logo -->
-        <a href="project1.html"><img src="assets/images/blockpixel_logo.png" class="logo" alt="Project 1"></a>
-        <a href="project2.html"><img src="assets/images/gridpixel_logo.png" class="logo" alt="Project 2"></a>
+        <a href="blockpixel.html"><img src="assets/images/blockpixel_logo.png" class="logo" alt="BlockPixel"></a>
+        <a href="gridpixel.html"><img src="assets/images/gridpixel_logo.png" class="logo" alt="GridPixel"></a>
     </footer>
 </body>
 </html>
