--- a/blockpixel.html
+++ b/blockpixel.html
@@ -37,8 +37,8 @@
 <body>
     <div class="content">
         <h1>BlockPixel</h1>
-        <p>This is a detailed introduction to Project 1. It showcases our creativity and innovation.</p>
-        <img src="assets/images/blockpixel_logo.png" alt="BlockPixel Image">
+        <p>This is a detailed introduction to BlockPixel. It showcases our creativity and innovation.</p>
+        <img src="assets/images/blockpixel_details.png" alt="BlockPIxel Image">
     </div>
 </body>
 </html>
