--- a/gridpixel.html
+++ b/gridpixel.html
@@ -37,8 +37,8 @@
 <body>
     <div class="content">
         <h1>GridPixel</h1>
-        <p>This is a detailed introduction to Project 1. It showcases our creativity and innovation.</p>
-        <img src="assets/images/gridpixel_logo.png" alt="GridPixel Image">
+        <p>This is a detailed introduction to GridPixel. It showcases our creativity and innovation.</p>
+        <img src="assets/images/gridpixel_details.png" alt="GridPixel Image">
     </div>
 </body>
 </html>
