--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
             padding: 20px;
             font-family: Arial, sans-serif;
             position: relative;
+            color: white;
+            text-align: center;
         }
 
         .logo-container {
