--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <main>
         <section>
             <h2>RainbowPixel Studio</h2>
-            <p>This is the RainbowPixel Studio website that I created.</p>
+            <p>RainbowPixel is a vibrant and creative young team dedicated to content creation for the Minecraft Marketplace. We specialize in developing high-quality texture packs, skin packs, behavior packs, and maps, delivering diverse and exciting experiences for players. Our goal is to showcase the endless possibilities of Minecraft through unique creativity and professional craftsmanship, lighting up the blocky worlds of every player!</p>
         </section>
 
         <!-- 项目 Logo 区域 -->
