--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
 
         <!-- 项目 Logo 区域 -->
         <div class="logo-container">
-            <a href="blockpixel.html"><img src="assets/images/blockpixel_icon.png" alt="blockpixel Logo"></a>
-            <a href="gridpixel.html"><img src="assets/images/gridpixel_icon.png" alt="gridpixel Logo"></a>
+            <a href="jakobzero.html"><img src="assets/images/Jakob_Logo-64a.png" alt="Jakob.zero Logo"></a>
         </div>
     </main>
 
