--- a/jakobzero.html
+++ b/jakobzero.html
@@ -36,7 +36,7 @@
 </head>
 <body>
     <div class="content">
-        <h1>BlockPixel</h1>
+        <h1>Jakob.zero</h1>
         <p>Texture creator Jakob_zero.</p>
         <img src="assets/images/Jakob_Logo-64a.png" alt="JakobZero Image">
     </div>
