--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Jakob_zero. All Rights Reserved. | RainbowPixel</p>
+        <p>&copy; RainbowPixel 2024. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
