--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
         </section>
 
         <!-- 项目 Logo 区域 -->
-        <div class="logo-container">
-            <a href="jakobzero.html"><img src="assets/images/Jakob_Logo-64a.png" alt="Jakob.zero Logo"></a>
-        </div>
+        <!-- div class="logo-container" -->
+            <!-- a href="jakobzero.html"><img src="assets/images/Jakob_Logo-64a.png" alt="Jakob.zero Logo"></a>
+    </div -->
     </main>
 
     <footer>
