--- a/index.html
+++ b/index.html
@@ -123,6 +123,27 @@
     <!-- 主内容 -->
     <main>
         <!-- 留白区域 -->
+        <!-- 留白区域 -->
+        <!-- 留白区域 -->
+        <!-- 留白区域 -->
+        <!-- 留白区域 -->
+        <!-- 留白区域 -->
+        <!-- 留白区域 -->
+        <!-- 留白区域 -->
+        <!-- 留白区域 -->
+        <!-- 留白区域 -->
+        <!-- 留白区域 -->
+        <!-- 留白区域 -->
+        <!-- 留白区域 -->
+        <!-- 留白区域 -->
+        <!-- 留白区域 -->
+        <!-- 留白区域 -->
+        <!-- 留白区域 -->
+        <!-- 留白区域 -->
+        <!-- 留白区域 -->
+        <!-- 留白区域 -->
+        <!-- 留白区域 -->
+        <!-- 留白区域 -->
         <section>
             <h2>Welcome to RainbowPixel Studio</h2>
             <p>We are dedicated to creating exciting and innovative Minecraft content.</p>
