--- a/index.html
+++ b/index.html
@@ -119,30 +119,12 @@
             <a href="contact.html">Contact</a>
         </nav>
     </header>
+    
+    <!-- 动态空白区域 -->
+    <div class="spacer"></div>
 
     <!-- 主内容 -->
     <main>
-        <!-- 留白区域 -->
-        <!-- 留白区域 -->
-        <!-- 留白区域 -->
-        <!-- 留白区域 -->
-        <!-- 留白区域 -->
-        <!-- 留白区域 -->
-        <!-- 留白区域 -->
-        <!-- 留白区域 -->
-        <!-- 留白区域 -->
-        <!-- 留白区域 -->
-        <!-- 留白区域 -->
-        <!-- 留白区域 -->
-        <!-- 留白区域 -->
-        <!-- 留白区域 -->
-        <!-- 留白区域 -->
-        <!-- 留白区域 -->
-        <!-- 留白区域 -->
-        <!-- 留白区域 -->
-        <!-- 留白区域 -->
-        <!-- 留白区域 -->
-        <!-- 留白区域 -->
         <!-- 留白区域 -->
         <section>
             <h2>Welcome to RainbowPixel Studio</h2>
