--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <main>
         <!-- 展示区 -->
         <section>
-            <div class="section-title">展示区</div>
+            <div class="section-title">Exhibition</div>
             <div class="scroll-container">
                 <img src="assets/images/demo1.jpg" alt="Demo 1">
                 <img src="assets/images/demo2.jpg" alt="Demo 2">
@@ -145,7 +145,7 @@
 
         <!-- 作品展示区 -->
         <section>
-            <div class="section-title">作品展示区</div>
+            <div class="section-title">Protfolio</div>
             <div class="scroll-container">
                 <img src="assets/images/work1.jpg" alt="Work 1">
                 <img src="assets/images/work2.jpg" alt="Work 2">
@@ -155,7 +155,7 @@
 
         <!-- YouTube 视频展示区 -->
         <section>
-            <div class="section-title">YouTube 视频展示区</div>
+            <div class="section-title">Video Preview</div>
             <div class="scroll-container">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_1" frameborder="0" allowfullscreen></iframe>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_2" frameborder="0" allowfullscreen></iframe>
