--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         /* 标题样式 */
         .section-title {
-            background: red;
+            background: rgba(120, 25, 100, 0.8);
             color: white;
             padding: 10px;
             text-align: center;
