--- a/index.html
+++ b/index.html
@@ -133,6 +133,10 @@
 
     <!-- 主体内容 -->
     <main>
+        <section>
+            <h2>RainbowPixel Studio</h2>
+            <p>RainbowPixel is a vibrant and creative young team dedicated to content creation for the Minecraft Marketplace. We specialize in developing high-quality texture packs, skin packs, behavior packs, and maps, delivering diverse and exciting experiences for players. Our goal is to showcase the endless possibilities of Minecraft through unique creativity and professional craftsmanship, lighting up the blocky worlds of every player!</p>
+        </section>
         <!-- 展示区 -->
         <section>
             <div class="section-title">Exhibition</div>
