--- a/index.html
+++ b/index.html
@@ -126,6 +126,10 @@
             <a href="blog.html">Blog</a>
             <a href="contact.html">Contact</a>
         </nav>
+        <!-- 主标题 -->
+        <div class="main-title">
+            RainbowPixel Studio
+        </div>
     </header>
 
     <!-- 空白区域 -->
