--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            height: 100%;
+            height: 200%;
             overflow-x: hidden; /* 禁止横向滚动 */
         }
 
@@ -24,6 +24,7 @@
             height: 100%;
             background: url('assets/images/Cover_1920_Brig.png') no-repeat center center;
             background-size: cover;
+            background-attachment: fixed; /* 固定背景相对于视口 */
             z-index: -1;
         }
 
