--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             padding: 0;
             font-family: Arial, sans-serif;
             height: 150%;
-            overflow-x: scroll; /* 禁止横向滚动 */
+            overflow-x: hidden; /* 禁止横向滚动 */
         }
 
         /* 背景图片 */
