--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             padding: 0;
             font-family: Arial, sans-serif;
             height: 150%;
+            background: #37c1dd;
             overflow-x: hidden; /* 禁止横向滚动 */
         }
 
@@ -204,7 +205,7 @@
 
         window.addEventListener('scroll', () => {
             const scrollPosition = window.scrollY;
-            background.style.backgroundPositionY = `${scrollPosition * 0.5}px`; // 调整滚动速度，0.5 为减缓比例
+            background.style.backgroundPositionY = `${scrollPosition * 0.2}px`; // 调整滚动速度，0.5 为减缓比例
         });
     </script>
 </body>
