--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
             padding: 0;
             font-family: Arial, sans-serif;
             height: 150%;
-            background: #37c1dd;
             overflow-x: hidden; /* 禁止横向滚动 */
         }
 
@@ -21,10 +20,12 @@
             position: fixed;
             top: 0;
             left: 0;
+            right: 0;
             width: 100%;
             height: 100%;
             background: url('assets/images/Cover_1920_Brig.png') no-repeat center center;
             background-size: cover;
+            background: #37c1dd;
             background-attachment: fixed; /* 固定背景相对于视口 */
             z-index: -1;
         }
