--- a/index.html
+++ b/index.html
@@ -11,23 +11,30 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            height: 150%;
-            overflow-x: hidden; /* 禁止横向滚动 */
+            height: 200%;
+            overflow-x: scroll; /* 禁止横向滚动 */
         }
 
-        /* 背景图片 */
-        .background-image {
+        /* 背景图片样式 */
+        .background-container {
             position: fixed;
             top: 0;
             left: 0;
-            right: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #37c1dd; /* 填充空白区域的背景颜色 */
+            z-index: -1; /* 背景位于内容下方 */
+            overflow: hidden; /* 确保背景图片不会溢出容器 */
+        }
+
+        .background-image {
+            position: absolute;
+            top: 0;
+            left: 0;
             width: 100%;
             height: 100%;
             background: url('assets/images/Cover_1920_Brig.png') no-repeat center center;
             background-size: cover;
-            background: #37c1dd;
-            background-attachment: fixed; /* 固定背景相对于视口 */
-            z-index: -1;
         }
 
         /* 背景滚动减速效果 */
