--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            height: 200%;
-            overflow-x: scroll; /* 禁止横向滚动 */
+            height: auto%;  /* 高度自动适应内容 */
+            overflow-x: auto; /* 启用垂直滚动 */
         }
 
         /* 背景图片样式 */
@@ -208,6 +208,22 @@
     </footer>
 
     <script>
+        // 获取页面高度
+        const mainContent = document.body;
+        const pageHeight = mainContent.scrollHeight;
+        const viewportHeight = window.innerHeight;
+
+        // 如果内容小于视口高度，设置高度限制
+        if (pageHeight < viewportHeight) {
+            mainContent.style.height = `${viewportHeight}px`;
+        }
+
+        // 限制滚动位置
+        window.addEventListener('scroll', () => {
+            const maxScroll = pageHeight - viewportHeight;
+            if (window.scrollY > maxScroll) {
+                window.scrollTo(0, maxScroll); // 阻止滚动超出页脚
+            }
         // 动态调整背景图片滚动速度
         const background = document.querySelector('.background-image');
 
