--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            height: auto%;  /* 高度自动适应内容 */
-            overflow-x: auto; /* 启用垂直滚动 */
+            height: 200%;  /* 高度自动适应内容 */
+            overflow-x: scroll; /* 启用垂直滚动 */
         }
 
         /* 背景图片样式 */
